--- a/css/index.css
+++ b/css/index.css
@@ -305,7 +305,12 @@
 .con-reg-title:after{transition:transform ease 0.3s;-webkit-transition:-webkit-transform ease 0.3s;-moz-transition:-webkit-transform ease 0.3s;-ms-transition:-webkit-transform ease 0.3s;}
 .con-reg-title.collapsed:after {transform: rotate(-180deg);-moz-transform: rotate(-180deg);-ms-transform: rotate(-180deg);-webkit-transform: rotate(-180deg);}
 
-
+/* 预览轮播图 */
+.g-filter{position:absolute;top:0;left:0;width:100%;height:100%;background: #000;opacity:0.5;filter:alpha(opacity=50);z-index:100;}
+.g-big-pic{position:absolute;top:0;left:0;width:100%;height:100%;text-align: center;z-index:100;}
+.g-big-pic img,.g-big-pic i{display:inline-block;vertical-align: middle;}
+.g-big-pic i{height:100%;}
+.g-big-pic img{max-width:100%;max-height:100%;}
 
 /*轮播图*/
 .carousel-inner>.active, .carousel-inner>.next, .carousel-inner>.prev{
