--- a/css/index.css
+++ b/css/index.css
@@ -35,8 +35,9 @@
 	.col-md-8{width: 830px;}
 }
 
-
-
+.sec-blank{margin-top:20px;min-height:320px;background: #f6f6f6;text-align: center;display:box;display:-webkit-box;display:-moz-box;display:-ms-box;box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;box-align:center;-webkit-box-align:center;-moz-box-align:center;-ms-box-align:center;}
+.sec-blank img{display:block;width:140px;height:151px;}
+.sec-blank p{line-height:26px;font-size:18px;color:#d0d0d0;}
 /*视频*/
 .video-box{/*height: 268px; */color: #fff; position: relative; margin-top: 32px;}
 .video-item{display: block; width: 100%; height: 100%;}
